--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
-WinFormsApp1/WinFormsApp1/obj/
-WinFormsApp1/antivirusTC/obj/
+# Ignorar archivos de compilación y ejecución
+**/bin/
+**/obj/
+**.pdb
+**.dll
+**.exe
+**.cache
+**.restore.info
