--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 # Ignorar archivos de compilación y ejecución
 **/bin/
 **/obj/
-**.pdb
-**.dll
-**.exe
-**.cache
-**.restore.info
+*.pdb
+*.dll
+*.exe
+*.cache
+*.restore.info
